# makuosan

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.ja  Changelog  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.ja  common.c  config.h.in  configure  configure.ac  configure.in  makuo.c  makuosan.c  makuosan.h  mexec.c  mexit.c  minit.c  mrecv.c  mrecv.h  msend.c  msync.c  protocol.txt  xprint.c
docs/: loglevel.txt  protocol.txt
support/: makuosan.spec  makuosan.sysv
